@@ -2,6 +2,7 @@
 Changes for 2.3.0
 
 New features:
+........S. [ZBXNEXT-2256] added support of host level macros like {HOST.*} along with user macros in LLD filter regexps (Sasha)
 ..F....... [ZBX-7979] added button "Clear history and trends" to scenarios form (Krists)
 ..F....... [ZBXNEXT-2065] added new filter option for the trigger status in Monitoring->Triggers (Oleg)
 ..F....... [ZBXNEXT-949] improved filters by adding different titles for open and collapsed states (Krists)
